data/derived/sp14/progs/unify/prog4342.ml.out
Characters 131-148:
  | Sine (e1)          -> Printf.sprintf"%s" (exprToString e1) 
                                             ^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         string
